# jhu-module7

./: .env.example  .env.vultr.example  .gitignore  README.md  pyproject.toml
deploy/systemd/: alert-notifier.service  inventory-api.service  inventory-worker.service  jhu-module7.env.example  jhu-module7.vultr.env.example
docs/: deployment_aws_ec2.md  deployment_vultr.md  report.md
docs/screenshots/: 03-systemctl-api.txt  04-systemctl-worker.txt  05-systemctl-notifier.txt  README.md  demo-output.txt  firewall-rules.txt  health-output.txt  kafka-topics.txt  postgres-evidence.txt  pytest-output.txt  terraform-output.txt  terraform-plan-clean.txt  terraform-plan-live-clean.txt  terraform-state-list.txt  valkey-evidence.txt  vultr-resource-list.txt
infra/terraform/: README.md  main.tf  outputs.tf  user_data.sh.tftpl  variables.tf
infra/vultr/terraform/: README.md  cloud-init.yaml.tftpl  main.tf  outputs.tf  variables.tf
scripts/: demo_requests.sh
src/inventory_reorder/: __init__.py  api.py  aws.py  cache.py  decision.py  messages.py  models.py  notifier.py  postgres_storage.py  runtime.py  settings.py  storage.py  vultr_messaging.py  worker.py
tests/: test_decision.py  test_messages.py  test_processes.py
